# Circuit

./: .gitignore  Dockerfile.api  Dockerfile.collator  Dockerfile.frontend  Dockerfile.importer  Dockerfile.logger  Dockerfile.mailer  Dockerfile.soon  Dockerfile.uploader  Mac.md  Makefile  circuit.env  package-lock.json  package.json
api/: Cargo.toml  Dockerfile  Makefile  sqlx-data.json  testclient.py
api/db/: insert_opportunity.sql  query_opportunity_by_id.sql  query_opportunity_by_partner_uid.sql  query_person_by_id.sql  query_person_by_uid.sql
api/db/opportunity/: exists_by_uid.sql  get_by_uid.sql
api/db/partner/: exists_by_uid.sql  fetch_opportunities.sql  get_by_uid.sql
api/migrations/: 20210412114632_create-basic-types.sql  20210412114632_opportunity.sql  20210413162239_person.sql  20210413180612_uids.sql  20210414201518_partner.sql  20210415160304_initial.sql
api/src/: crypto.rs  main.rs  v1.rs
api/static/: v1.json
backend/: .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
backend/.sqlx/: query-005101e21d617cc4272744eaa5887f3b7d75cde255862559dd21abded2155e4c.json  query-040cd9268da69419a8991010b3a86ebdc798e32e1c0f147df85efad0ad9b131e.json  query-04e898a00d8423102c9a6e1309a044129d75eb667b2d2248389ee52495a9657e.json  query-051896d92698a86feef624bd3274c2c7a567e5b7a78216ce977e18dca203097a.json  query-053a67fe8b042a63d11206ddd587dd2694fe388093672c7e81c67012e190f8d4.json  query-0728727f4cf678675de9bcf64a42edfeda661477048870fc060fd629d4a8a8e7.json  query-080257742eaf5e3d3ed1adf52af5e2829797997c3c741bd83b778fe90cd980b8.json  query-084bf953c2b2281d11cc4f9d5cd4de005de7aceb24e3e01089f9529c18279b45.json  query-0888ef105b2eba2bbb77443ef7e1461441c88600a729f243bd4302d60a63703b.json  query-08986676112a9e73ebb0cbac140ca20b9d91d38996a346ddfb6ccc99e6dfad1c.json  query-0e2935d69c1890193bf5fab94f5ebee2cdaae8da61bef03c88ebd756a3007a7e.json  query-0ec3f759b28232683f2bb167b6feca0c843fef8cd331601685e15eee434d1139.json  query-10c5c906d1f0d4035023e001e4a29b4672fd4ea21d554d92eef23e2b8b469b10.json  query-11fb2644f41ef623a6037456f5dcad607809723cc8ffd9ce22326fe49072188c.json  query-129c46d01a03c02d9a3603e765c04dfcddf6fdf639df9ab5a4f9667060b4b5a5.json  query-132518e6d26acb52ae3aaf158f8785eba77a97051b380417e1e48112e669b6d9.json  query-13e80912017307b2fdc2a349ba915437c4f8a9619c44957ae5713010f43df91d.json  query-1414f68ab4360321ba93192f21f33c3daf8f9bea4a33e9e8eb876bead893a14a.json  query-15d541a93d3803b392c0b6b38de23b544d3de843786750405fc547b6f2d6b9ef.json  query-165d7316d01575e75a86575573250a021f489a93475e16505f1f606f76a63452.json  query-1684eefb4618d5b11b2c903e7186537ec1b4ee664d08ba9701cf38c6eb8939b7.json  query-168a9c9ff36339135e8720b2727522196ee894677b9e9b2a9c3a215bc897af16.json  query-16c2c55e815ab95459806d09490778d0d7688fba73d832620db4eb398c3dd4ad.json  query-177eda5e85c57f932c8189e11b417d0316fbe823b0c2d964d18ea3b6c068b021.json  query-1a9b415592cc4cc43f1cf22cfba1e94eb9c2008fd9e0ef42575c629fa08c3a79.json  query-20508a6dc06815a21e3a9e95db9412c603196a5e5604295c673c5e3d5ce02c36.json  query-21aec14f83e3a1b31aba6a7a025e11807fdca8b3fa731088c40360eeedce4e57.json  query-22696fb5fa61d667f88a78fa736b83f3c91113040ac0756fec397d82445fd5cb.json  query-2293e3b23cc8ca3ecf385aa38fcda4c2b9f42f3a0f5279756ca97dc2f7a4848a.json  query-22abed5d07e437b28c26864dffff2933e07e8255d70b04ae186820719576ebd5.json  query-232db60cfb4ba3a2fd8869075ca90f615000a51968582c00b28f66aa687e63e7.json  query-25262582727131f390aa437db7df677218bb23ee1c710187a1b7809b2bc3219b.json  query-2590521fdcba7503bb733ca1ffc1e8ac7c09f7d74005ce8c46677caa7188aa4e.json  query-25fae2e8caf08739890d067dec651e4fafb75b63fe8e2c6ed9e89069f62d12bb.json  query-2602562ac3d9be14802eed4bf154d32b4640dbb713984c17d438cd63334dc352.json  query-266f42c1d4baa5ee205c8dfa7b008214a6d85bf1a0c67c35d1a55bc7cea93853.json  query-2a809234aa879c53daf4820fbc8b475ee901771434a306649a5d25f662b45cec.json  query-2aa518a8e7a5f3491d2ef1c26ffa4385f0f5c6de7864bf0c0898dbd5abfbe0f6.json  query-2b2df38b9852f278364e368e4aa779bca4e03a51cbb8d8687ad2304655c88a67.json  query-2b87a4d7ace05f3ba94db2844316c5e3c5a2786fd744e4ee6f1d7a46c44e91a6.json  (+178 more)
backend/collator/: Cargo.toml  Makefile  sqlx-data.json
backend/common/: .gitignore  Cargo.toml  sqlx-data.json
backend/importer/: .gitignore  Cargo.toml  Makefile
backend/logger/: Cargo.toml  Makefile
backend/mailer/: Cargo.toml  Makefile
backend/soon/: Cargo.toml  Makefile
backend/src/: main.rs
backend/static/: htmx.js  htmx.js.map  manage.css  v1.html  v1.json
backend/uploader/: Cargo.toml  Makefile
backend/vendor.cargo/: config.toml
backend/vue_template_compiler/: Cargo.toml  readme.md
common/: Cargo.toml  sqlx-data.json
common/migrations/: 20210426224757_datetimes.up.sql  20210511194339_participation.down.sql  20210511194339_participation.up.sql  20210705180830_block.down.sql  20210706194429_content-tags-and-label.down.sql  20210706194429_content-tags-and-label.up.sql  20210727143355_fulltext_tags_and_topics.down.sql  20210727143355_fulltext_tags_and_topics.up.sql  20210728133332_exclude_blank_slugs.down.sql  20210728133332_exclude_blank_slugs.up.sql  20210811175456_import_record.down.sql  20210811175456_import_record.up.sql  20210823144342_involvement.down.sql  20210830184736_comingsoon.up.sql  20210907170117_review_report.down.sql  20210907170117_review_report.up.sql  20210914114331_remove-legacy-bookmark-table.down.sql  20210915102450_cascade-like-review.down.sql  20210915102450_cascade-like-review.up.sql  20210920080252_revise-gender-and-ethnicity.down.sql  20210920080252_revise-gender-and-ethnicity.up.sql  20211021090020_user_log.down.sql  20211108100152_fix_location_generated_fields.up.sql  20211110185221_current_field_for_opportunities.up.sql  20220211204403_c_widget_views.down.sql  20220217001503_email_message.up.sql  20220224114832_invitation.down.sql  20220224114832_invitation.up.sql
common/src/: emails.rs  geo.rs  jwt.rs  lib.rs  time.rs  timezones.rs
importer/: .gitignore  Cargo.toml  Makefile
importer/src/: config.rs  lib.rs  service.rs
k8s/: psql.sh  (+19 more)
logger/: Cargo.toml  Makefile
logger/src/: main.rs
(+722 files in other folders)
