[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
common = { path = "../common/" }
askama = { version = "0.10.5", features = ["with-tide"] }
askama_tide = "0.13.0"
async-std = { version = "1.10.0", features = ["attributes"] }
djangohashers = "1.4.3"
hex = "0.4.3"
hmac = "0.11.0"
jwt = "0.15.0"
once_cell = "1.8.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_qs = "0.8"
sha2 = "0.9.8"
sqlx = { version = "0.5.9", features = ["runtime-async-std-rustls", "postgres", "macros", "migrate", "uuid", "time", "json", "tls", "offline"] }
tide = "0.16.0"
tide-fluent-routes = "0.1.5"
#tide-websockets = "0.3.0"
time = { version = "0.2.27", features = ["serde"] }
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4", "v5", "serde"] }
http-types = "2.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
surf = { version = "2.3.1", default-features = false, features = ["h1-client-rustls"] }
shellfish = { version = "0.6.0", features = ["rustyline", "async", "async-std"] }
anyhow = "1.0.44"
sodiumoxide = "0.2.7"
readonly = "0.2.0"
thiserror = "1.0.30"
bytes = { version = "1.1.0", features = ["serde"] }
