[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"
default-run = "server"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[features]
container = []

[workspace]
members = [
    "common",
    "importer",
    "logger",
    "uploader",
    "mailer",
    "soon",
    "vue_template_compiler",
    "collator",
]

[dependencies]
common = { path = "common/" }
async-std = { version = "1.12.0", features = ["attributes"] }
djangohashers = "1.6.0"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.17.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_qs = "0.11.0"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = ["runtime-async-std-rustls", "postgres", "macros", "migrate", "uuid", "time", "json", "tls", "offline"] }
tide = "0.16.0"
tide-fluent-routes = "0.1.5"
#tide-websockets = "0.3.0"
time = { version = "0.2.27", features = ["serde"] }
urlencoding = "2.1.2"
uuid = { version = "1.2.2", features = ["v4", "v5", "serde"] }
http-types = "2.12.0"
chrono = { version = "0.4.23", features = ["serde"] }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
shellfish = { version = "0.6.0", features = ["rustyline", "async", "async-std"] }
anyhow = "1.0.68"
sodiumoxide = "0.2.7"
readonly = "0.2.3"
thiserror = "1.0.38"
bytes = { version = "1.3.0", features = ["serde"] }
counter = "0.5.7"
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
sailfish = "0.6.0"
strum = { version = "0.24.1", features = ["derive"] }
