[package]
name = "server"
version = "0.2.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"
default-run = "server"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[features]
container = []

[workspace]
members = [
    "common",
    "importer",
    "logger",
    "uploader",
    "mailer",
    "soon",
    "vue_template_compiler",
    "collator",
]

[dependencies]
common = { version = "0.2.0", path = "common/" }
async-std = { version = "1.12.0", features = ["attributes"] }
djangohashers = "1.7.2"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.11.0"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["runtime-async-std-rustls", "postgres", "macros", "migrate", "uuid", "time", "json"] }
tide = "0.16.0"
tide-fluent-routes = "0.1.5"
#tide-websockets = "0.3.0"
time = { version = "0.2.27", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "v5", "serde"] }
http-types = "2.12.0"
chrono = { version = "0.4.31", features = ["serde"] }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
shellfish = { version = "0.6.0", features = ["rustyline", "async", "async-std"] }
anyhow = "1.0.75"
sodiumoxide = "0.2.7"
readonly = "0.2.11"
thiserror = "1.0.51"
bytes = { version = "1.5.0", features = ["serde"] }
counter = "0.5.7"
clap = { version = "4.3.24", features = ["derive"] }
csv = "1.3.0"
sailfish = "0.6.1"
strum = { version = "0.24.1", features = ["derive"] }
regex = "1.10.2"
