[package]
name = "common"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
ammonia = "3.1.2"
async-std = { version = "1.10.0", features = ["attributes"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.0"
djangohashers = "1.4.3"
futures = "0.3.17"
hex = "0.4.3"
hmac = "0.11.0"
jwt = "0.15.0"
once_cell = "1.8.0"
readonly = "0.2.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"
sha2 = "0.9.8"
sqlx = { version = "0.5.9", features = ["runtime-async-std-rustls", "postgres", "macros", "migrate", "uuid", "time", "json", "tls", "offline", "chrono"] }
strum = "0.22.0"
strum_macros = "0.22.0"
surf = { version = "2.3.1", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["v4", "v5", "serde"] }
