[package]
name = "common"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
aho-corasick = "0.7.18"
ammonia = "3.1.4"
async-std = { version = "1.10.0", features = ["attributes"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
djangohashers = "1.5.5"
futures = "0.3.21"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.9.0"
readonly = "0.2.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
sha2 = "0.10.2"
sqlx = { version = "0.5.11", features = ["runtime-async-std-rustls", "postgres", "macros", "migrate", "uuid", "time", "json", "tls", "offline", "chrono"] }
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["v4", "v5", "serde"] }
