[package]
name = "importer"
version = "0.1.0"
authors = ["Daniel Arbuckle <djarb@highenergymagic.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "importer"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[dependencies]
common = { path = "../common" }
bytes = { version = "1.0.1", features = ["serde"] }
csv = "1.1.6"
ical = "0.7.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
ureq = { version = "2.1.1", features = ["json", "charset"] }
sqlx = "0.5.5"
async-std = "1.9.0"
