[package]
name = "importer"
version = "0.1.0"
authors = ["Daniel Arbuckle <djarb@highenergymagic.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

## This setting is only needed when generating a flamegraph
#[profile.release]
#debug = true

[features]
container = []

[lib]
name = "importer"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[dependencies]
common = { path = "../common" }
bytes = { version = "1.0.1", features = ["serde"] }
csv = "1.1.6"
ical = "0.7.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
ureq = { version = "2.1.1", features = ["json", "charset"] }
sqlx = "0.5.5"
async-std = "1.9.0"
async-trait = "0.1.51"
chrono = "0.4.19"
once_cell = "1.8.0"
uuid = "0.8.2"
http-auth-basic = "0.2.2"
chrono-tz = "0.5.3"
htmlentity = "1.2.0"
Inflector = "0.11.4"
