[package]
name = "importer"
version = "0.1.0"
authors = ["Daniel Arbuckle <djarb@highenergymagic.org>"]
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
## This setting is only needed when generating a flamegraph
#debug = true

[features]
container = []

[lib]
name = "importer"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[dependencies]
common = { path = "../common" }
bytes = { version = "1.1.0", features = ["serde"] }
csv = "1.1.6"
ical = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
ureq = { version = "2.4.0", features = ["json", "charset"] }
sqlx = "0.5.11"
async-std = "1.10.0"
async-trait = "0.1.52"
chrono = "0.4.19"
once_cell = "1.9.0"
uuid = "0.8.2"
http-auth-basic = "0.3.1"
chrono-tz = "0.6.1"
htmlentity = "1.2.0"
Inflector = "0.11.4"
