[package]
name = "logger"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
anyhow = "1.0.40"
async-std = { version = "1.9.0", features = ["attributes"] }
rusty-s3 = "0.1.2"
surf = "2.2.0"
tide = "0.16.0"
