[package]
name = "collator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
common = { version = "0.1.0", path = "../common", default-features = false, features = ["tokio"] }
futures-util = "0.3.28"
google-analyticsdata1_beta = "4.0.1"
google-bigquery2 = "5.0.2"
once_cell = "1.17.1"
reqwest = { version = "0.11.16", features = ["rustls-tls", "brotli", "gzip", "deflate"] }
rusty-s3 = "0.4.1"
serde_json = "1.0.96"
serde_qs = "0.11.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "chrono", "postgres", "json", "uuid", "macros", "offline", "tls", "migrate"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
uuid = "1.3.1"
