[package]
name = "collator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
common = { version = "0.1.0", path = "../common", default-features = false, features = ["tokio"] }
futures-util = "0.3.28"
google-analyticsdata1_beta = "4.0.1"
google-bigquery2 = "5.0.2"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["rustls-tls", "brotli", "gzip", "deflate"] }
rusty-s3 = "0.4.1"
serde_json = "1.0.102"
serde_qs = "0.11.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "chrono", "postgres", "json", "uuid", "macros", "migrate"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = "1.4.0"
