[package]
name = "collator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
common = { version = "0.1.0", path = "../common", default-features = false, features = ["tokio"] }
futures-util = "0.3.30"
google-analyticsdata1_beta = "5.0.3"
google-bigquery2 = "5.0.3"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["rustls-tls", "brotli", "gzip", "deflate"] }
rusty-s3 = "0.5.0"
serde_json = "1.0.111"
serde_qs = "0.12.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "chrono", "postgres", "json", "uuid", "macros", "migrate"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = "1.6.1"
