[package]
name = "common"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []
default = ["asyncstd"]
asyncstd = ["sqlx/runtime-async-std-rustls"]
tokio = ["sqlx/runtime-tokio-rustls"]

[dependencies]
aho-corasick = "0.7.20"
ammonia = "3.3.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.74"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = "0.8.3"
deunicode = "1.3.3"
djangohashers = "1.6.8"
futures = "0.3.28"
geo = { version = "0.26.0", features = ["use-serde"] }
geozero = { version = "0.11.0", features = ["with-postgis-sqlx", "with-wkb"] }
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.18.0"
readonly = "0.2.10"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_repr = "0.1.14"
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = ["postgres", "macros", "migrate", "uuid", "time", "json", "chrono"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0.43"
time = { version = "0.3.20", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4", "v5", "serde"] }
