[package]
name = "common"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []
default = ["asyncstd"]
asyncstd = ["sqlx/runtime-async-std-rustls"]
tokio = ["sqlx/runtime-tokio-rustls"]

[dependencies]
aho-corasick = "1.1.3"
ammonia = "3.3.0"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.8.6"
deunicode = "1.6.0"
djangohashers = "1.7.3"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
inflections = "1.1.1"
jwt = "0.16.0"
once_cell = "1.19.0"
readonly = "0.2.12"
regex = "1.10.6"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
serde_repr = "0.1.19"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "migrate", "uuid", "time", "json", "chrono"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "v5", "serde"] }
