[package]
name = "importer"
version = "0.1.0"
authors = ["Daniel Arbuckle <djarb@highenergymagic.org>"]
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[lib]
name = "importer"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[dependencies]
common = { path = "../common" }
bytes = { version = "1.4.0", features = ["serde"] }
csv = "1.2.2"
ical = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
ureq = { version = "2.7.1", features = ["json", "charset"] }
sqlx = "0.7.1"
async-std = "1.12.0"
async-trait = "0.1.71"
chrono = "0.4.26"
once_cell = "1.18.0"
uuid = "1.4.0"
http-auth-basic = "0.3.3"
chrono-tz = "0.8.3"
htmlentity = "1.3.1"
Inflector = "0.11.4"
regex = "1.9.1"
void = "1.0.2"
