[package]
name = "importer"
version = "0.1.0"
authors = ["Daniel Arbuckle <djarb@highenergymagic.org>"]
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[lib]
name = "importer"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[dependencies]
common = { path = "../common" }
bytes = { version = "1.5.0", features = ["serde"] }
csv = "1.3.0"
ical = "0.9.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
ureq = { version = "2.9.1", features = ["json", "charset"] }
sqlx = "0.7.3"
async-std = "1.12.0"
async-trait = "0.1.77"
chrono = "0.4.31"
once_cell = "1.19.0"
uuid = "1.6.1"
http-auth-basic = "0.3.3"
chrono-tz = "0.8.5"
htmlentity = "1.3.1"
Inflector = "0.11.4"
regex = "1.10.2"
void = "1.0.2"
