[package]
name = "importer"
version = "0.1.0"
authors = ["Daniel Arbuckle <djarb@highenergymagic.org>"]
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[lib]
name = "importer"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[dependencies]
common = { path = "../common" }
bytes = { version = "1.7.1", features = ["serde"] }
csv = "1.3.0"
ical = "0.9.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
ureq = { version = "2.10.1", features = ["json", "charset"] }
sqlx = "0.7.4"
async-std = "1.12.0"
async-trait = "0.1.81"
chrono = "0.4.38"
once_cell = "1.19.0"
uuid = "1.10.0"
http-auth-basic = "0.3.5"
chrono-tz = "0.8.6"
htmlentity = "1.3.2"
Inflector = "0.11.4"
regex = "1.10.6"
void = "1.0.2"
multipart = { version = "0.18.0", features = ["client"], default-features = false }
scraper = "0.19.1"
html5ever = "0.26.0"
