[package]
name = "uploader"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
common = { version = "0.2.0", path = "../common" }
futures-lite = "2.1.0"
once_cell = "1.19.0"
reqwest = "0.11.23"
rusty-s3 = "0.5.0"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
ulid = "1.1.0"
url = "2.5.0"
uuid = "1.6.1"
warp = "0.3.6"
