[package]
name = "uploader"
version = "0.1.0"
authors = ["Daniel Arbuckle <daniel@arbuckle-everything.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container = []

[dependencies]
bytes = "1.7.1"
chrono = "0.4.38"
common = { version = "0.1.0", path = "../common" }
futures-lite = "2.3.0"
once_cell = "1.19.0"
reqwest = "0.11.27"
rusty-s3 = "0.5.0"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
ulid = "1.1.3"
url = "2.5.2"
uuid = "1.10.0"
warp = "0.3.7"
